tests/NormalTests/paczka2/big_fuzzy/90036234.err
Error in line 8: y59y9 S847 83,5
Error in line 3: rN6RST2QzJ S847 7,4
Error in line 13: K0Ja3AxsSDm S409 21,6
Error in line 10: GjhDh S409 70,5
Error in line 11: rN6RST2QzJ S409 2,3
Error in line 24: qujD A982 58,3
Error in line 29: y59y9 S409 25,2
Error in line 36: y59y9 S8c7 2,1
Error in line 34: qujD S409 23,9
Error in line 33: y59y9 A982 74,7
Error in line 39: y59y9 S847 57,9
Error in line 48: rN6RST2QzJ S409 30,0
Error in line 25: GjhDh S847 51,7
Error in line 51: GjhDh S20 99,8
Error in line 49: rN6RST2QzJ S847 42,2
Error in line 70: myU A982 18,3
Error in line 71: rN6RST2QzJ S409 0,4
Error in line 84: qujD S409 2,8
Error in line 95: rN6RST2QzJ S20 96,0
Error in line 108: GjhDh S847 0,5
Error in line 110: qujD A982 97,4
Error in line 122: myU S847 16,9
Error in line 119: K0Ja3AxsSDm S847 17,3
Error in line 121: y59y9 S847 96,3
Error in line 144: myU A982 69,8
Error in line 127: qujD S409 75,4
Error in line 155: rN6RST2QzJ S409 67,8
Error in line 156: S20 S409 71,8
Error in line 158: S20 S20 24,4
Error in line 176: K0Ja3AxsSDm S20 246,0
Error in line 188: K0Ja3AxsSDm S20 13,5
Error in line 186: qujD A982 12,0
Error in line 191: qujD S847 2,3
Error in line 187: y59y9 S409 31,2
Error in line 203: K0Ja3AxsSDm S847 94,9
Error in line 206: y59y9 S847 46,9
Error in line 202: GjhDh S20 26,2
Error in line 211: y59y9 A982 13,5
Error in line 216: S20 A982 79,3
Error in line 209: qujD A982 218,8
Error in line 221: rN6RST2QzJ S409 27,8
Error in line 233: myU S847 46,1
Error in line 234: y59y9 A982 75,3
Error in line 241: y59y9 S847 78,7
